--- a/index.html
+++ b/index.html
@@ -11,18 +11,17 @@
     <div class="wrapper">
     <div class="container">
       <header>
-        <h1 class="name">jlord</h1>
+        <h1 class="name">Zheng Linying</h1>
       </header>
       <article>
-        <p>I'm an <a href="http://en.wikipedia.org/wiki/Open-source_software" target="_blank">open source</a> developer and designer living in Oakland, California. Far, far away from my <a href="http://en.wikipedia.org/wiki/Central_Georgia" target="_blank">East Coast US roots</a>. I work at <a href="http://www.github.com/about" target="_blank">GitHub</a>, mentor at programming events (<a href="http://www.nodeschool.io">NodeSchool.io</a>, <a href="https://github.com/blog/1805-patchwork-night" target="_blank">Patchwork</a>) and do some conferences, too.</p>
-        <p> Previously I was an <a href="http://www.bostonredevelopmentauthority.org" target="_blank">urban designer</a>, but the call of the wild open tech world would win me over.</p>
+       <p style="font-size:medium;">&emsp;&emsp;Xiao Zheng, &nbsp;beautiful,&nbsp; very beautiful.&nbsp; Breathtaking,&nbsp; gorgeous, &nbsp;stunning; &nbsp;Graceful, &nbsp;elegant,&nbsp; classy; &nbsp;Charming,&nbsp; irresistible,&nbsp; attractive. &nbsp;Be Compared to a summer's day, &nbsp;like the night of cloudless climes and starry skies.&nbsp; She had me at hello.</p>
       </article>
 
     <footer>
       <ul class="meta inline-list">
-        <li><a href="mailto:to.jlord@gmail.com">to.jlord@gmail.com</a></li>
-        <li><a href="http://www.twitter.com/jllord" target="_blank">twitter/jllord</a></li>
-        <li><a href="http://www.github.com/jlord" target="_blank">github/jlord</a></li>
+        <li><a href="Introduction.html">Introduction</a></li>
+        <li><a href="./Pre_Page/index.html">See previous version</a></li>
+        <li><a href="Contact.html" target="_blank">Contact me</a></li>
       </ul>
     </footer>
   </div>
