--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
         <h1 class="name">Zheng Linying</h1>
       </header>
       <article>
-       <p style="font-size:medium;">&emsp;&emsp;Xiao Zheng, &nbsp;beautiful,&nbsp; very beautiful.&nbsp; Breathtaking,&nbsp; gorgeous, &nbsp;stunning; &nbsp;Graceful, &nbsp;elegant,&nbsp; classy; &nbsp;Charming,&nbsp; irresistible,&nbsp; attractive. &nbsp;Be Compared to a summer's day, &nbsp;like the night of cloudless climes and starry skies.&nbsp; She had me at hello.</p>
+        <p>&emsp;&emsp;小郑，女，20，喜欢<a href="./摆烂小郑.html">摆烂</a>。不仅摆烂，还啥也<a href="./不会.html">不会</a>。啥也不会，还想摆烂。喜欢偷偷努力和假努力，和<a>假装偷偷努力</a>。未来之路光明灿烂，所以明天再烂一天。不想写了，开始摆烂。</p>
+       <p>&emsp;&emsp;Xiao Zheng, &nbsp;beautiful,&nbsp; very beautiful.&nbsp; <a href="#" title="令人惊叹的">Breathtaking</a>,&nbsp; <a href="#" title="漂亮的">gorgeous</a>, &nbsp;<a href="#" title="惊艳的">stunning</a>; &nbsp;<a href="#" title="优雅的">graceful</a>, &nbsp;<a href="#" title="优雅的"></a>elegant,&nbsp; <a href="#" title="高贵的">classy</a>; &nbsp;<a href="#" title="迷人的">charming</a>,&nbsp; <a href="#" title="无法抵挡的">irresistible</a>,&nbsp; <a href="#" title="吸引人的">attractive</a>. &nbsp;Be <a href="#" title="莎士比亚：shall I compare thee to  a summer's day">Compared to a summer's day</a>, &nbsp;<a href="#" title="拜伦《She  Walks In Beauty》">like the night of cloudless climes and starry skies.&nbsp</a>;</p>
       </article>
 
     <footer>
       <ul class="meta inline-list">
-        <li><a href="Introduction.html">Introduction</a></li>
+        <li><a href="./index.html" target="_blank">Main page</a></li>
         <li><a href="./Pre_Page/index.html">See previous version</a></li>
-        <li><a href="Contact.html" target="_blank">Contact me</a></li>
+        <li><a href="./Introduction.html">Introduction</a></li>
       </ul>
     </footer>
   </div>
