--- a/Introduction.html
+++ b/Introduction.html
@@ -17,7 +17,8 @@
       <article>
         <img src="./Pre_Page/2.jpeg" width="450px" height="450px">
         <p>美女，更多照片见：<a href="https://image.baidu.com/search/index?tn=baiduimage&ps=1&ct=201326592&lm=-1&cl=2&nc=1&ie=utf-8&dyTabStr=MCwxLDMsNiwyLDQsNSw3LDgsOQ%3D%3D&word=%E8%8C%83%E5%86%B0%E5%86%B0">我的照片</a>。</p>
-        <p>学习认真，工作努力，每天都做学习强国。</p>
+        <p>学习认真，工作努力。</p>
+        <p>永远年轻，永远爱做学习强国</p>
         <p>更多个人内容见：<a href="https://blog.csdn.net/zhaoxizxzx/article/details/126697648?spm=1001.2014.3001.5502">关于我</a>。</p>
         <!-- <p style=" float: right;">美女，秀雅绝俗，轻灵之气，肌肤娇嫩，神态悠闲，美目流盼，桃腮带笑，含辞未吐，气若幽兰，温柔可人。肌肤胜雪，双目犹似一泓清水，清雅高华，勾魂摄魄，魂牵蒙绕。晶莹如玉，如新月生晕，如花树堆雪，环姿艳逸、仪静体闲、柔情绰态、媚于语言、娇柔婉转之际，美艳不可方物。吐语如珠，动听之极，神态天真、娇憨顽皮、双颊晕红，容色清丽、气度高雅，明珠美玉，脸朝花束、身形苗条，闭月羞花，鱼沉雁落，不让须眉，巾帼英雄，慧指兰心，冰清玉洁，玉洁冰清，。</p> -->
       </article>
